--- a/Workspace/TeapotWars/packages.config
+++ b/Workspace/TeapotWars/packages.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Assimp" version="3.0.0" targetFramework="Native" />
+  <package id="Assimp.redist" version="3.0.0" targetFramework="Native" />
+  <package id="boost" version="1.56.0.0" targetFramework="Native" />
   <package id="glfw" version="3.0.4.3" targetFramework="Native" />
   <package id="glfw.redist" version="3.0.4.3" targetFramework="Native" />
   <package id="glm" version="0.9.5.4" targetFramework="Native" />
   <package id="rxd_glew" version="1.10.0.1" targetFramework="Native" />
   <package id="rxd_glew.redist" version="1.10.0.1" targetFramework="Native" />
+  <package id="sfml" version="2.1.0.0" targetFramework="Native" />
+  <package id="sfml.redist" version="2.1.0.0" targetFramework="Native" />
   <package id="tinyxml2" version="2.1.0" targetFramework="Native" />
   <package id="tinyxml2.redist" version="2.1.0" targetFramework="Native" />
 </packages>
