--- a/Workspace/QuicksandEngine/packages.config
+++ b/Workspace/QuicksandEngine/packages.config
@@ -3,6 +3,9 @@
   <package id="Assimp" version="3.0.0" targetFramework="Native" />
   <package id="Assimp.redist" version="3.0.0" targetFramework="Native" />
   <package id="boost" version="1.56.0.0" targetFramework="Native" />
+  <package id="boost_filesystem" version="1.56.0.0" targetFramework="Native" />
+  <package id="boost_filesystem-vc120" version="1.56.0.0" targetFramework="Native" />
+  <package id="boost_system-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="DevIL" version="1.7.8" targetFramework="Native" />
   <package id="DevIL.redist" version="1.7.8" targetFramework="Native" />
   <package id="glfw" version="3.0.4.3" targetFramework="Native" />
