--- a/Workspace/QuicksandEngine/packages.config
+++ b/Workspace/QuicksandEngine/packages.config
@@ -11,12 +11,18 @@
   <package id="glfw" version="3.0.4.3" targetFramework="Native" />
   <package id="glfw.redist" version="3.0.4.3" targetFramework="Native" />
   <package id="glm" version="0.9.5.4" targetFramework="Native" />
+  <package id="libjpeg" version="9.0.1.3" targetFramework="Native" />
+  <package id="libjpeg.redist" version="9.0.1.3" targetFramework="Native" />
   <package id="libogg" version="1.3.0.1" targetFramework="Native" />
   <package id="libogg.redist" version="1.3.0.1" targetFramework="Native" />
+  <package id="libpng" version="1.5.10.11" targetFramework="Native" />
+  <package id="libpng.redist" version="1.5.10.11" targetFramework="Native" />
   <package id="rxd_glew" version="1.10.0.1" targetFramework="Native" />
   <package id="rxd_glew.redist" version="1.10.0.1" targetFramework="Native" />
   <package id="sfml" version="2.1.0.0" targetFramework="Native" />
   <package id="sfml.redist" version="2.1.0.0" targetFramework="Native" />
   <package id="tinyxml2" version="2.1.0" targetFramework="Native" />
   <package id="tinyxml2.redist" version="2.1.0" targetFramework="Native" />
+  <package id="zlib" version="1.2.8.6" targetFramework="Native" />
+  <package id="zlib.redist" version="1.2.8.6" targetFramework="Native" />
 </packages>
